--- a/product/report.html
+++ b/product/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,6767],[],[[4,0,5,[],[1,2695,285],[]],[6,0,7,[],[1,2981,254],[]],[8,0,9,[],[1,3237,262],[]],[10,0,11,[],[1,3500,392],[]],[12,0,13,[],[1,3893,408],[]],[14,0,15,[],[1,4302,268],[]]],[],[6,6,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,10796],[],[[4,0,5,[],[1,2639,4531],[]],[6,0,7,[],[1,7171,274],[]],[8,0,9,[],[1,7446,298],[]],[10,0,11,[],[1,7746,309],[]],[12,0,13,[],[1,8056,273],[]],[14,0,15,[],[1,8331,271],[]]],[],[6,6,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Cart Page Tests","*D:\\ROBOT\\product\\cart_page_tests.robot","*cart_page_tests.robot","*TC-101 View Cart","*<p>แสดงสินค้าที่ถูกเพิ่มลงในตะกร้า\x3c/p>","*TC-104 Remove Item","*<p>ลบสินค้าออกจากตะกร้า 1 รายการ และตรวจสอบจำนวนในตะกร้าลดลง\x3c/p>","*TC-105 Empty Cart","*<p>ลบสินค้าทั้งหมดให้ตะกร้าว่าง\x3c/p>","*TC-106 Cart Badge Sync","*<p>ตรวจสอบตัวเลข badge บนไอคอนตะกร้าให้ตรงกับจำนวนสินค้า\x3c/p>","*TC-107 Proceed To Checkout","*<p>ไปหน้า Checkout ได้จากตะกร้า\x3c/p>","*TC-112 Cart Icon Navigation","*<p>คลิกไอคอนตะกร้าจาก inventory แล้วต้องไป /cart.html\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Product Page Tests","*D:\\ROBOT\\product\\product_page_tests.robot","*product_page_tests.robot","*TC-007 Add And Remove Items","*<p>Adding all available products to the cart and then removing them\x3c/p>","*TC-008 Sort Items A To Z","*<p>Verify sorting from A to Z\x3c/p>","*TC-009 Sort Items Z To A","*<p>Verify sorting from Z to A\x3c/p>","*TC-010 Sort Items Low To High","*<p>Verify sorting price low to high\x3c/p>","*TC-011 Sort Items High To Low","*<p>Verify sorting price high to low\x3c/p>","*TC-012 Cart Icon Navigation","*<p>Clicking cart icon should navigate to cart page\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:02","fail":0,"label":"All Tests","pass":6,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"Cart Page Tests","name":"Cart Page Tests","pass":6,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":6,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Product Page Tests","name":"Product Page Tests","pass":6,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1755751957146;
+window.output["baseMillis"] = 1755752942125;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 6788;
+window.output["generated"] = 10822;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
